@@ -175,12 +175,7 @@ The command
 .I o
 is always considered as command
 .IR u .
-The
-.IR u ,
-.IR e ,
-and
-.I x
-commands of an optional log service cannot be customized.
+The control of the optional log service cannot be customized.
 .SH SIGNALS
 If
 .B runsv
