@@ -3,8 +3,11 @@ usage: runsv dir
 1
 starting
 run
+term
+starting
 0
 0
 starting
+no interrupt
 0
 starting
